--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>br.com.douglasheldpacito</groupId>
-    <artifactId>helloworld</artifactId>
+    <artifactId>calculadoraMensal</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>Hello World</name>
+    <name>Calculadora Mensal</name>
  
     <dependencies>
         <dependency>
