--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,17 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>3.2.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>net.bootsfaces</groupId>
+		    <artifactId>bootsfaces</artifactId>
+		    <version>1.2.0</version>
+		    <scope>compile</scope>
+		</dependency>
     </dependencies>
  
     <build>
